# WordGame

./: .gitignore  CMakeLists.txt  todo.md
include/: application.hpp  assert.hpp  commands.hpp  constants.hpp  item.hpp  multipliers.hpp  render.hpp  renderoptions.hpp  rendertable.hpp  resource.hpp  resourceidentifier.hpp  resourcemanager.hpp  strings.hpp  table.hpp  tools.hpp  update_handler.hpp  wg_forward.hpp
include/debug/: log.hpp
include/framework/: file_io.hpp  fileio.hpp  json_io.hpp  json_tools.hpp  render.hpp  resource.hpp  resourceidentifier.hpp  resourcemanager.hpp  supertools.hpp  table.hpp  tools.hpp  webclient.hpp  window_context.hpp  window_io.hpp  window_item.hpp  windowcontext.hpp
include/game/: board.hpp  boardcoordinate.hpp  context.hpp  game_io.hpp  item.hpp  multipliers.hpp  scoring.hpp  settings.hpp  tile.hpp  turn.hpp  update.hpp
include/graphics/: display_mode.hpp
scripts/: fix-compile-commands.py  full-test.sh  grab-deps.sh  mac-build.sh  ubuntu-build.sh
src/: application.cpp  board.cpp  context.cpp  game_io.cpp  main.cpp  render.cpp  rendertable.cpp  resourcemanager.cpp  scoring.cpp  settings.cpp  table.cpp  tile.cpp  webclient.cpp  window_context.cpp  window_io.cpp  window_items.cpp  windowcontext.cpp
src/dev/: devclient.cpp  devclient.hpp
src/web/: client.cpp  client.hpp  connections.cpp  connections.hpp  server.cpp  server.hpp  session.cpp  session.hpp  testclient.cpp  testserver.cpp  ws_session.cpp  ws_session.hpp
